--- a/trunk/USSoloForms29/Components/SWFExportPanel.wo/SWFExportPanel.html
+++ b/trunk/USSoloForms29/Components/SWFExportPanel.wo/SWFExportPanel.html
@@ -1,18 +1,23 @@
-<WEBOBJECT NAME=SWAdminComponentWrapper1>Exporting <WEBOBJECT NAME=String2></WEBOBJECT> record(s)
-
-<P>Fields to export:</P>
-
-<WEBOBJECT NAME=Form1><TABLE CELLPADDING=2 BORDER=1 CELLSPACING=0>
-<WEBOBJECT NAME=Conditional1><TR>
-<TD><WEBOBJECT NAME=PopUpButton1></WEBOBJECT></TD>
-<TD><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></TD>
-</TR>
-</WEBOBJECT><WEBOBJECT NAME=Repetition1>
-<TR>
-<TD><WEBOBJECT NAME=String1></WEBOBJECT></TD>
-<TD><WEBOBJECT NAME=SubmitButton2></WEBOBJECT></TD>
-</TR></WEBOBJECT>
-</TABLE>
-
-</WEBOBJECT><p>
-File encoding: <WEBOBJECT NAME=PopUpButton2></WEBOBJECT></p><WEBOBJECT NAME=Form2><WEBOBJECT NAME=SubmitButton3></WEBOBJECT></WEBOBJECT></WEBOBJECT>
+<webobject name = "WRAPPER">
+	<p>Exporting  <webobject name = "String2" /> record(s)</p> 
+	<p>Fields to export:</p>
+	
+	<webobject name = "Form1">
+		<table cellpadding = "2" border = "1" cellspacing = "0">
+			<webobject name = "Conditional1">
+				<tr>
+					<td><webobject name = "PopUpButton1" /></td>
+					<td><webobject name = "SubmitButton1" /></td>
+				</tr>
+			</webobject>
+			<webobject name ="Repetition1">
+				<tr>
+					<td><webobject name = "String1" /></td>
+					<td><webobject name = "SubmitButton2" /></td>
+				</tr>
+			</webobject>
+		</table>
+	</webobject>
+	<p>File encoding: <webobject name = "PopUpButton2" /></p>
+	<webobject name = "Form2"> <webobject name = "SubmitButton3" /> </webobject>
+</webobject>
