--- a/trunk/USSoloForms29/Components/SWFFieldDisplay.wo/SWFFieldDisplay.html
+++ b/trunk/USSoloForms29/Components/SWFFieldDisplay.wo/SWFFieldDisplay.html
@@ -1,1 +1,32 @@
-<WEBOBJECT NAME=Conditional7><WEBOBJECT NAME=TextField1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional8><WEBOBJECT NAME=Text1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional10><WEBOBJECT NAME=SWFCheckbox1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional19><WEBOBJECT NAME=Repetition3><WEBOBJECT NAME=CheckBox1></WEBOBJECT>&nbsp;<WEBOBJECT NAME=String13></WEBOBJECT><BR></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional11><WEBOBJECT NAME=RadioButtonList1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional9><WEBOBJECT NAME=PopUpButton1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional1><WEBOBJECT NAME=FileUpload1></WEBOBJECT><WEBOBJECT NAME=Conditional2><BR><BR><WEBOBJECT NAME=Hyperlink1><WEBOBJECT NAME=String1></WEBOBJECT></WEBOBJECT></WEBOBJECT></WEBOBJECT>
+<WEBOBJECT NAME="Conditional7">
+	<WEBOBJECT NAME="TextField1" />
+</WEBOBJECT>
+<WEBOBJECT NAME="Conditional8">
+	<WEBOBJECT NAME="Text1" />
+</WEBOBJECT>
+
+<WEBOBJECT NAME="Conditional10">
+	<WEBOBJECT NAME="SWFCheckbox1" />
+</WEBOBJECT>
+
+<WEBOBJECT NAME="Conditional19">
+	<WEBOBJECT NAME="Repetition3">
+		<WEBOBJECT NAME="CheckBox1" />&nbsp;<WEBOBJECT NAME="String13" /><br />
+	</WEBOBJECT>
+</WEBOBJECT>
+
+<WEBOBJECT NAME="Conditional11">
+	<WEBOBJECT NAME="RadioButtonList1" />
+</WEBOBJECT>
+
+<WEBOBJECT NAME="Conditional9" />
+	<WEBOBJECT NAME="PopUpButton1" />
+</WEBOBJECT>
+
+<WEBOBJECT NAME="Conditional1" />
+	<WEBOBJECT NAME="FileUpload1" />
+</WEBOBJECT>
+
+<WEBOBJECT NAME="Conditional2">
+	<WEBOBJECT NAME="Hyperlink1"><WEBOBJECT NAME="String1" /></WEBOBJECT></WEBOBJECT>
+</WEBOBJECT>
