--- a/trunk/USSoloForms29/Components/SWFFieldListPalette.wo/SWFFieldListPalette.html
+++ b/trunk/USSoloForms29/Components/SWFFieldListPalette.wo/SWFFieldListPalette.html
@@ -1,1 +1,15 @@
-<WEBOBJECT NAME=Conditional2><WEBOBJECT NAME=PopUpButton3></WEBOBJECT><WEBOBJECT NAME=SubmitButton2></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional1><WEBOBJECT NAME=Conditional3><BR></WEBOBJECT><TABLE CELLPADDING=2 BORDER=1 CELLSPACING=0><WEBOBJECT NAME=Repetition1><TR><TD><WEBOBJECT NAME=String1></WEBOBJECT></TD><TD><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></TD></TR></WEBOBJECT></TABLE></WEBOBJECT>
+<webobject NAME="HAS_MORE_FIELDS">
+	<webobject NAME="FIELD_POPUP" />
+	<webobject NAME="ADD_FIELD_BUTTON" />
+</webobject>
+
+<webobject NAME="HAS_FIELDS_CONDITIONAL">
+	<table>
+		<webobject NAME="FIELD_REPETITION">
+			<TR>
+				<TD><webobject NAME="FIELD_NAME_STRING" /></TD>
+				<TD><webobject NAME="REMOVE_FIELD_BUTTON" /></TD>
+			</TR>
+		</webobject>
+	</TABLE>
+</webobject>
