--- a/trunk/USSoloForms29/Components/SWFRegistrationList.wo/SWFRegistrationList.html
+++ b/trunk/USSoloForms29/Components/SWFRegistrationList.wo/SWFRegistrationList.html
@@ -1,7 +1,100 @@
-<B>Search</B>&nbsp;<WEBOBJECT NAME=Conditional9><p><WEBOBJECT NAME=SubmitButton2></WEBOBJECT></p></WEBOBJECT><WEBOBJECT NAME=Conditional20><p><WEBOBJECT NAME=SubmitButton5></WEBOBJECT></p></WEBOBJECT><WEBOBJECT NAME=Conditional19><TABLE BORDER=0 STYLE="border: 1px solid #666666;" CELLPADDING=2 CELLSPACING=0 CLASS=genericTable><TR><TH>Field</TH><TH>Value</TH><TH>&nbsp;</TH></TR><WEBOBJECT NAME=Repetition4><TR><TD ALIGN=RIGHT VALIGN=TOP><WEBOBJECT NAME=Conditional1><WEBOBJECT NAME=PopUpButton1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional2><B><WEBOBJECT NAME=String6></WEBOBJECT></B></WEBOBJECT></TD><TD VALIGN=TOP><WEBOBJECT NAME=Conditional15><WEBOBJECT NAME=TextField3></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional3><WEBOBJECT NAME=Conditional10><WEBOBJECT NAME=TextField1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional11><WEBOBJECT NAME=TextField2></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional12><WEBOBJECT NAME=SWFCheckbox1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional13><WEBOBJECT NAME=RadioButtonList1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional14><WEBOBJECT NAME=PopUpButton2></WEBOBJECT></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional4><WEBOBJECT NAME=String7></WEBOBJECT></WEBOBJECT></TD><TD><WEBOBJECT NAME=Conditional8><WEBOBJECT NAME=SubmitButton3></WEBOBJECT></WEBOBJECT></TD></TR></WEBOBJECT><TR><TD ALIGN=RIGHT COLSPAN=3><WEBOBJECT NAME=SubmitButton1></WEBOBJECT></TD></TR></TABLE></WEBOBJECT><P><WEBOBJECT NAME=SubmitButton6></WEBOBJECT></P><WEBOBJECT NAME=Conditional5><TABLE CELLSPACING=0 CELLPADDING=2 CLASS=genericTable BORDER=1><TR><TH>&nbsp;</TH><TH><WEBOBJECT NAME=Hyperlink3>Date</WEBOBJECT></TH><TH><WEBOBJECT NAME=Hyperlink4>Number</WEBOBJECT></TH><WEBOBJECT NAME=Repetition3><TH><WEBOBJECT NAME=Hyperlink5><WEBOBJECT NAME=String3></WEBOBJECT></WEBOBJECT></TH></WEBOBJECT>
-<TH>&nbsp;</TH>
-<TH>&nbsp;</TH><WEBOBJECT NAME=Conditional17><TH>&nbsp;</TH>
-</WEBOBJECT></TR><WEBOBJECT NAME=Repetition2><TR><TD><WEBOBJECT NAME=String4></WEBOBJECT></TD><TD><WEBOBJECT NAME=String2></WEBOBJECT></TD><TD><WEBOBJECT NAME=String5></WEBOBJECT></TD><WEBOBJECT NAME=Repetition1><TD><WEBOBJECT NAME=Conditional22><WEBOBJECT NAME=Conditional6><WEBOBJECT NAME=String1></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional7><WEBOBJECT NAME=KeyValueConditional1>X</WEBOBJECT></WEBOBJECT></WEBOBJECT><WEBOBJECT NAME=Conditional18><WEBOBJECT NAME=Conditional21><WEBOBJECT NAME=Hyperlink7><WEBOBJECT NAME=String9></WEBOBJECT> (<WEBOBJECT NAME=String8></WEBOBJECT>K)</WEBOBJECT></WEBOBJECT></WEBOBJECT></TD></WEBOBJECT>
-<TD><WEBOBJECT NAME=Hyperlink2>Print</WEBOBJECT></TD>
-<TD><WEBOBJECT NAME=Hyperlink6>Edit</WEBOBJECT></TD><WEBOBJECT NAME=Conditional16><TD><WEBOBJECT NAME=SubmitButton4></WEBOBJECT></TD>
-</WEBOBJECT></TR></WEBOBJECT></TABLE><BR><WEBOBJECT NAME=Hyperlink1>Export these records</WEBOBJECT></WEBOBJECT>
+<webobject name="HAS_NO_SEARCH_ARGUMENTS">
+  <p><webobject name = "SHOW_ALL_RECORDS_BUTTON" /></p>
+</webobject>
+
+<fieldset>
+	<legend>Search</legend>
+	<webobject name = "Conditional9">
+  	<webobject name = "ADD_SEARCH_ARGUMENT_BUTTON" />
+	</webobject>
+</fieldset>
+
+
+<webobject name = "Conditional19">
+  <table>
+    <tr>
+      <th>Field</th>
+      <th>Value</th>
+      <th>&nbsp;</th>
+    </tr>
+    <webobject name = "Repetition4">
+      <tr>
+        <td align = "RIGHT" valign = "TOP">
+          <webobject name = "Conditional1"><webobject name = "PopUpButton1" /></webobject>
+          <webobject name = "Conditional2">
+            <b><webobject name = "String6" /></b>
+          </webobject>
+        </td>
+        <td valign = "TOP">
+          <webobject name = "Conditional15"><webobject name = "TextField3" /></webobject>
+          <webobject name = "Conditional3">
+            <webobject name = "Conditional10"><webobject name = "TextField1" /></webobject>
+            <webobject name = "Conditional11"><webobject name = "TextField2" /></webobject>
+            <webobject name = "Conditional12"><webobject name = "SWFCheckbox1" /></webobject>
+            <webobject name = "Conditional13"><webobject name = "RadioButtonList1" /></webobject>
+            <webobject name = "Conditional14"><webobject name = "PopUpButton2" /></webobject>
+          </webobject>
+          <webobject name = "Conditional4"><webobject name = "String7" /></webobject>
+        </td>
+        <td>
+          <webobject name = "Conditional8"><webobject name = "SubmitButton3" /></webobject>
+        </td>
+      </tr>
+    </webobject>
+    <tr>
+      <td align = "RIGHT" colspan = "3"><webobject name = "SubmitButton1" /></td>
+    </tr>
+  </table>
+</webobject>
+<p><webobject name = "SubmitButton6" /></p>
+<webobject name = "Conditional5">
+  <table cellspacing = "0" cellpadding = "2" class = "genericTable" border = "1">
+    <tr>
+      <th>&nbsp;</th>
+      <th><webobject name = "Hyperlink3">Date</webobject></th>
+      <th><webobject name = "Hyperlink4">Number</webobject></th>
+      <webobject name = "Repetition3">
+        <th><webobject name = "Hyperlink5"><webobject name = "String3" /></webobject></th>
+      </webobject>
+      <th>&nbsp;</th>
+      <th>&nbsp;</th>
+      <webobject name = "Conditional17">
+        <th>&nbsp;</th>
+      </webobject>
+    </tr>
+    <webobject name = "Repetition2">
+      <tr>
+        <td><webobject name = "String4" /></td>
+        <td><webobject name = "String2" /></td>
+        <td><webobject name = "String5" /></td>
+        <webobject name = "Repetition1">
+          <td>
+            <webobject name = "Conditional22">
+              <webobject name = "Conditional6"><webobject name = "String1" /></webobject>
+              <webobject name = "Conditional7">
+                <webobject name = "KeyValueConditional1">X</webobject>
+              </webobject>
+            </webobject>
+            <webobject name = "Conditional18">
+              <webobject name = "Conditional21">
+                <webobject name = "Hyperlink7">
+                  <webobject name = "String9" /> (<webobject name = "String8" />KiB)</webobject>
+              </webobject>
+            </webobject>
+          </td>
+        </webobject>
+        <td>
+          <webobject name = "Hyperlink2">Print</webobject>
+        </td>
+        <td>
+          <webobject name = "Hyperlink6">Edit</webobject>
+        </td>
+        <webobject name = "Conditional16">
+          <td><webobject name = "SubmitButton4" /></td>
+        </webobject>
+      </tr>
+    </webobject>
+  </table>
+  <br />
+  <webobject name = "Hyperlink1">Export these records</webobject>
+</webobject>
