--- a/trunk/USSoloForms29/Components/SWFEditFields.wo/SWFEditFields.html
+++ b/trunk/USSoloForms29/Components/SWFEditFields.wo/SWFEditFields.html
@@ -1,6 +1,6 @@
-<p><webobject name = "SubmitButton3" /></p>
-<webobject name = "Conditional1">
-  <table border = "1" cellpadding = "2" cellspacing = "0" class = "genericTable" width = "100%">
+<p><webobject name="ADD_FIELD_BUTTON" /></p>
+<webobject name="HAS_FIELDS_CONDITIONAL">
+  <table cellpadding="0" cellspacing="0">
     <tr>
       <th>Name</th>
       <th>Type</th>
@@ -13,21 +13,17 @@
     </tr>
     <webobject name = "Repetition2">
       <tr>
-        <td rowspan = "2"><webobject name = "TextField2" /></td>
-        <td rowspan = "2"><webobject name = "PopUpButton1" /></td>
-        <td rowspan = "2"><webobject name = "CheckBox2" /></td>
-        <td rowspan = "2"><webobject name = "CheckBox1" /></td>
-        <td rowspan = "2"><webobject name = "CheckBox4" /></td>
-        <td rowspan = "2"><webobject name = "SubmitButton2" /></td>
+        <td><webobject name = "TextField2" /></td>
+        <td><webobject name = "PopUpButton1" /></td>
+        <td><webobject name = "CheckBox2" /></td>
+        <td><webobject name = "CheckBox1" /></td>
+        <td><webobject name = "CheckBox4" /></td>
+        <td><webobject name = "SubmitButton2" /></td>
         <td>
           <webobject name = "Conditional2"><webobject name = "UP_BUTTON" /></webobject>
-        </td>
-        <td rowspan = "2"><webobject name = "SubmitButton4" /></td>
-      </tr>
-      <tr>
-        <td>
           <webobject name = "Conditional3"><webobject name = "DOWN_BUTTON" /></webobject>
         </td>
+        <td><webobject name = "SubmitButton4" /></td>
       </tr>
     </webobject>
   </table>
