--- a/trunk/USSoloForms29/Components/SWFRegistrationList.wo/SWFRegistrationList.html
+++ b/trunk/USSoloForms29/Components/SWFRegistrationList.wo/SWFRegistrationList.html
@@ -1,51 +1,49 @@
-<webobject name="HAS_NO_SEARCH_ARGUMENTS">
-  <p><webobject name = "SHOW_ALL_RECORDS_BUTTON" /></p>
-</webobject>
-
 <fieldset>
 	<legend>Search</legend>
+	<webobject name="HAS_NO_SEARCH_ARGUMENTS">
+		<webobject name = "SHOW_ALL_RECORDS_BUTTON" />
+	</webobject>
 	<webobject name = "Conditional9">
-  	<webobject name = "ADD_SEARCH_ARGUMENT_BUTTON" />
+  		<webobject name = "ADD_SEARCH_ARGUMENT_BUTTON" />
+	</webobject>
+	<webobject name = "Conditional19">
+	  <table>
+	    <tr>
+	      <th>Field</th>
+	      <th>Value</th>
+	      <th>&nbsp;</th>
+	    </tr>
+	    <webobject name = "Repetition4">
+	      <tr>
+	        <td align = "RIGHT" valign = "TOP">
+	          <webobject name = "Conditional1"><webobject name = "PopUpButton1" /></webobject>
+	          <webobject name = "Conditional2">
+	            <b><webobject name = "String6" /></b>
+	          </webobject>
+	        </td>
+	        <td valign = "TOP">
+	          <webobject name = "Conditional15"><webobject name = "TextField3" /></webobject>
+	          <webobject name = "Conditional3">
+	            <webobject name = "Conditional10"><webobject name = "TextField1" /></webobject>
+	            <webobject name = "Conditional11"><webobject name = "TextField2" /></webobject>
+	            <webobject name = "Conditional12"><webobject name = "SWFCheckbox1" /></webobject>
+	            <webobject name = "Conditional13"><webobject name = "RadioButtonList1" /></webobject>
+	            <webobject name = "Conditional14"><webobject name = "PopUpButton2" /></webobject>
+	          </webobject>
+	          <webobject name = "Conditional4"><webobject name = "String7" /></webobject>
+	        </td>
+	        <td>
+	          <webobject name = "Conditional8"><webobject name = "SubmitButton3" /></webobject>
+	        </td>
+	      </tr>
+	    </webobject>
+	    <tr>
+	      <td align = "RIGHT" colspan = "3"><webobject name = "SubmitButton1" /></td>
+	    </tr>
+	  </table>
 	</webobject>
 </fieldset>
 
-
-<webobject name = "Conditional19">
-  <table>
-    <tr>
-      <th>Field</th>
-      <th>Value</th>
-      <th>&nbsp;</th>
-    </tr>
-    <webobject name = "Repetition4">
-      <tr>
-        <td align = "RIGHT" valign = "TOP">
-          <webobject name = "Conditional1"><webobject name = "PopUpButton1" /></webobject>
-          <webobject name = "Conditional2">
-            <b><webobject name = "String6" /></b>
-          </webobject>
-        </td>
-        <td valign = "TOP">
-          <webobject name = "Conditional15"><webobject name = "TextField3" /></webobject>
-          <webobject name = "Conditional3">
-            <webobject name = "Conditional10"><webobject name = "TextField1" /></webobject>
-            <webobject name = "Conditional11"><webobject name = "TextField2" /></webobject>
-            <webobject name = "Conditional12"><webobject name = "SWFCheckbox1" /></webobject>
-            <webobject name = "Conditional13"><webobject name = "RadioButtonList1" /></webobject>
-            <webobject name = "Conditional14"><webobject name = "PopUpButton2" /></webobject>
-          </webobject>
-          <webobject name = "Conditional4"><webobject name = "String7" /></webobject>
-        </td>
-        <td>
-          <webobject name = "Conditional8"><webobject name = "SubmitButton3" /></webobject>
-        </td>
-      </tr>
-    </webobject>
-    <tr>
-      <td align = "RIGHT" colspan = "3"><webobject name = "SubmitButton1" /></td>
-    </tr>
-  </table>
-</webobject>
 <p><webobject name = "SubmitButton6" /></p>
 <webobject name = "Conditional5">
   <table cellspacing = "0" cellpadding = "2" class = "genericTable" border = "1">
