--- a/trunk/USSoloWeb29/Components/SWAdminComponentWrapper.wo/SWAdminComponentWrapper.html
+++ b/trunk/USSoloWeb29/Components/SWAdminComponentWrapper.wo/SWAdminComponentWrapper.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>SoloWeb <webobject name="VERSION_STRING" /></title>
 	</head>
 	<body>
