--- a/trunk/USSoloWeb29/Components/SWOldNewsComponent.wo/SWOldNewsComponent.html
+++ b/trunk/USSoloWeb29/Components/SWOldNewsComponent.wo/SWOldNewsComponent.html
@@ -3,7 +3,7 @@
 		<h3><webobject name="MONTH_STRING" /></h3>
 		<ul style="list-style-type: none">
 		<webobject name="NEWS_REPETITION">
-			<li><webobject name="DATE_STRING" />. <webobject name="LINK"><webobject name="NAME_STRING" /></webobject> - <webobject name="COMMENT_COUNT" /> tjáskipti</li>
+			<li><webobject name="LINK"><webobject name="NAME_STRING" /></webobject> <em style="color:gray">(<webobject name="DATE_STRING" />)</em><webobject name="ALLOW_COMMENTS_CONDITIONAL"> - <webobject name="COMMENT_COUNT" /> tjáskipti</webobject></li>
 		</webobject>
 		</ul>
 	</webobject>
